--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,8 @@
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/hardclimbs.css">
-
+    <link rel="shortcut icon" href="https://s3.amazonaws.com/hardclimbs/assets/favicon.ico" />
+    
     {{content-for "head-footer"}}
   </head>
   <body>
